--- a/thesis.tex
+++ b/thesis.tex
@@ -258,6 +258,7 @@ We also provide open-source implementations of our algorithms.
 \appendix
 \include{thesis-ch03-lazysp-proofs}
 \include{thesis-ch04-ibid-proofs}
+\include{thesis-ch06-family-appendix}
 
 \bibliographystyle{abbrv}
 \bibliography{references}
