--- a/thesis.tex
+++ b/thesis.tex
@@ -253,6 +253,7 @@ We also provide open-source implementations of our algorithms.
 \include{thesis-ch04-ibid}
 \include{thesis-ch05-lemur}
 \include{thesis-ch06-family}
+%\include{thesis-ch06-family-extra}
 \include{thesis-ch07-discussion}
 
 \appendix
