--- a/thesis-ch06-family.tex
+++ b/thesis-ch06-family.tex
@@ -102,7 +102,7 @@ Some approaches do take advantage of such structure
 through a two-level dichotomy between
 the \emph{permanent} and \emph{non-permanent} configuration space
 obstacles that induce $\mathcal{C}_{free}$.
-Leven and Hutchinson \citep{leven2000changing}
+Leven and Hutchinson \citep{leven2000changing, leven2002changing}
 and similar work \citep{kallman2004dynamicroadmaps}
 handle changing environments by
 precomputing a self-collision-free roadmap offline,
@@ -115,6 +115,8 @@ using a mapping from workspace cells to roadmap edges.
 Other methods \citep{jaillet2004dynamicprm}
 exploit the dichotomy between static and dynamic parts of
 the world online.
+The family motion planning problem is a generalization of these
+formulations to more than two C-space subsets.
 
 \paragraph{Task and Motion Planning.}
 The structure in manipulation tasks that our approach leverages
@@ -958,7 +960,7 @@ $\mathcal{M}_{\ms{family}}$ can
 within and between each planning query,
 and (b) leverage the family belief graph
 in order to compute for any current edge 
-an optimal optimistic sequence of indicator function invocations
+an optimistic optimal sequence of indicator function invocations
 in order to demonstrate that the edge $e$ is a member of the
 query subset $S_u$.
 
@@ -1026,8 +1028,10 @@ For the current motion planning query in the $i$-th subset $S_u$,
 we also identify all belief states $b \in V_{\mathcal{F}}$
 for which $b[i] = \mbox{True}$
 as goal vertices,
-and compute an optimal policy over
-the family belief graph $G_{\mathcal{F}}$ using a reverse
+and compute the distance function
+$d_{S_u} :  V_{\mathcal{F}} \rightarrow \mathbb{R}$
+and the corresponding optimal policy
+over the family belief graph $G_{\mathcal{F}}$ using a reverse
 Dijkstra's search.
 An example of this policy is shown
 in Figure~\ref{fig:family:belief-graph-example-wrels-policy}.
@@ -1035,7 +1039,7 @@ in Figure~\ref{fig:family:belief-graph-example-wrels-policy}.
 \begin{marginfigure}
    \centering
    \includegraphics{build/family-belief-graph-example-wrels-policy}
-   \caption{Optimal optimistic belief graph policy
+   \caption{Optimistic optimal belief graph policy
       for a family of two subsets, $S_1$ and $S_2$,
       with the subset relation that $S_1 \subseteq S_2$,
       and with $\hat{p}_1 = 1$ and $\hat{p}_2 = 10$.
@@ -1052,262 +1056,180 @@ in Figure~\ref{fig:family:belief-graph-example-wrels-policy}.
 
 \paragraph{The Belief-Informed Family Utility Model.}
 We are now ready to define the ensemble edge cost utility model
-$\mathcal{M}_{\ms{family}}$.
+$\mathcal{M}_{\ms{family}}$
+in Algorithm~\ref{alg:family:model-family}.
+Note that the implementation of $\mathcal{M}_{\ms{family}}$
+depends on the current query subset $S_u$.
 
+Once the optimistic optimal distance function and policy have been
+computed,
+calculating the planning and execution cost estimates for an edge $e$
+entails looking up the its current belief state $b_e$
+and then reading the value of the distance function $d_{S_u}$
+at the corresponding vertex.
+The conditionals inside each implementation take advantage of the
+fact that beliefs with $d_{S_u} = \infty$ correspond to certain
+knowledge that the edge $e$ is not a member of the query subset $S_u$.
 
-
-
-
-\vspace{1cm}
-
-the 
-(Algorithm~\ref{alg:family:effort-model})
-which allows for evaluation of an edge
-as well as estimates of its planning and execution effort
-in a way that takes advantage of family structure.
-The core of this model is the {\sc MultiOptCert} function
-which takes as input an edge $q_e$,
-a query $\mathcal{C}$-subset $U$,
-and a set of known logical propositions $P_{\ms{known}}$
-for that edge,
-and as output produces an \emph{optimistic validation certificate}
-consisting of subset indicators which if evaluated would
-validate the membership of the edge in $U$ with lowest effort.
-
-\paragraph{This works for edges too.}
-
-The problem is really about beliefs over states.
-Talk about the family graph.
-The belief space is $\mathcal{B}$,
-so we're really planning over $\mathcal{B} \times \mathcal{C}$.
-
-\begin{algorithm}
-\caption{Family Validitiy Effort Model
-   $\mathcal{M}_{\ms{multi}}$}
-\label{alg:family:effort-model}
-{\algrenewcommand\textproc{}% Used to be \textsc
+\begin{algorithm}[t]
+\caption{Family Edge Cost Model $\mathcal{M}_{\ms{family}}$}
+\label{alg:family:model-family}
 \begin{algorithmic}[1]
-\Function {$x_{\ms{multi}}$}{$e, U$}
-   \State $(\mathcal{F}_{\ms{cert}}, b_{\ms{cert}}, {\hat p}_{\ms{cert}})
-      \leftarrow \mbox{\sc MultiOptCert}(q_e, U,
-      P_{\ms{global}} \cup e.P_{\ms{eval}})$
-   \ForAll {$S \in \mathcal{F}_{\ms{cert}}$}
-      \State $b_{\ms{eval}} \leftarrow \mathbf{1}_S[q_e]$
-      \State $\arraycolsep=2pt
-         e.P_{\ms{eval}} \leftarrow e.P_{\ms{eval}} \cup
-         \left\{\begin{array}{rl}
-         \mathbf{1}_S & \mbox{if } b_{\ms{eval}} \\
-         \lnot \mathbf{1}_S & \mbox{otherwise} \\
-         \end{array}
-         \right\}$
-      \If {$b_{\ms{eval}} \neq b_{\ms{cert}}(S)$}
-         \State \Return $\infty$
-      \EndIf
-   \EndFor
-   \State \Return $0$
+\Function{$\grave{p}_{\ms{\textup{family}}}$}{$e$}
+   \Comment remaining plan-cost estimator
+   \State $b_e \leftarrow$ stored belief state of edge $e$
+   \If {$d_{S_u}(b_e) < \infty$}
+      \State \Return $\sum_{q \in e} d_{S_u}(b_e)$
+   \Else
+      \State \Return $0$
+   \EndIf
 \EndFunction
-\Function {$\hat{x}_{\ms{multi}}$}{$e, U$}
-   \State \Return $0$
-\EndFunction
-\Function {$\hat{p}_{\ms{multi}}$}{$e, U$}
-   \State $(\mathcal{F}_{\ms{cert}}, b_{\ms{cert}}, {\hat p}_{\ms{cert}})
-      \leftarrow \mbox{\sc MultiOptCert}(q_e, U,
-      P_{\ms{global}} \cup e.P_{\ms{eval}})$
-   \State \Return ${\hat p}_{\ms{cert}}$
+\Function{$\hat{x}_{\ms{\textup{family}}}$}{$e$}
+   \Comment exec-cost estimator
+   \State $b_e \leftarrow$ stored belief state of edge $e$
+   \If {$d_{S_u}(b_e) < \infty$}
+      \State \Return $0$
+   \Else
+      \State \Return $\infty$
+   \EndIf
 \EndFunction
 \end{algorithmic}
-} %textproc
 \end{algorithm}
 
-\paragraph{Calculating the Family Optimistic Certificate}
-%The \textsc{MultiOptCert} function (Alg.~\ref{alg:opt-edge-plan})
-%performs the core reasoning which exploits the relations in
-%the family problem.
-The \textsc{MultiOptCert} function (Alg.~\ref{alg:family:opt-edge-plan})
-is tasked with computing
-the optimistically optimal set of indicator evaluations to perform
-for the edge in order to validate its membership in the query
-$\mathcal{C}$-subset $U$.
-The function returns three elements:
-(a) the family of $\mathcal{C}$-subsets
-$\mathcal{F}_{\ms{cert}} \subseteq \mathcal{F}$
-whose indicators are to be evaluated,
-(b) a binary function $b_{\ms{res}}$
-which provides the desired indicator result for each evaluation,
-and (c) the total evaluation cost ${\hat p}_{\ms{cert}}$
-given by the $\hat{p}_S[\cdot]$ functionals
-(Section~\ref{sec:family:formulation}).
+During each iteration of the LEMUR algorithm over its roadmap,
+the planner will find a candidate path according to its $\lambda_p$
+tradeoff parameter,
+and will then select an edge which is not yet fully evaluated
+(i.e. has $\grave{p}_{\ms{\textup{family}}} > 0$).
+It will then commit to evaluating that edge.
+Conducting the LEMUR search with the $\mathcal{M}_{\ms{family}}$
+edge cost model requires a modified edge cost determination
+procedure $x_{\ms{\textup{family}}}$
+shown in Algorithm~\ref{alg:family:model-family-cost}.
+The purpose of this procedure is to
+(a) delegate the edge evaluation to the correct edge subset indicator
+functions $\mathbf{1}_{S}[\cdot]$,
+and (b) to maintain the correct belief state $b_e$ for the edge
+as the actual indicator results are returned.
+
+In addition,
+note also that depending on the particular set relations $\mathcal{R}$,
+a single invocation of the procedure $x_{\ms{\textup{family}}}$
+may not fully evaluate the edge --
+for example, in the belief graph
+from Figure~\ref{fig:family:belief-graph-example-wrels-policy},
+the optimistic optimal path selects the $S_1$ indicator,
+optmistically assuming that it will return True,
+the belief state $b_e$ will transition to $(T,T)$,
+and the edge will be demonstrated valid.
+But if the indicator returns False,
+the belief state $b_e$ instead transitions to the complementary
+belief state $(F,U)$ which is at the target of the complementary edge
+$(S_1,\mbox{F})$.
+At this point,
+the edge is still not fully evaluated,
+and is therefore available to LEMUR on a subsequent iteration
+if the utility objective demands it.
 
 \begin{algorithm}
-\caption{Family Optimistic Certification}
-\label{alg:family:opt-edge-plan}
+\caption{Family Edge Cost Procedure}
+\label{alg:family:model-family-cost}
 \begin{algorithmic}[1]
-\Function {MultiOptCert}{$q_e, U, P_{\ms{known}}$}
-   \State $\mathcal{T}_{\ms{imply}} \leftarrow \emptyset$
-   \ForAll {$\mathcal{F}_{\ms{cert}} \in \mathcal{P}(\mathcal{F})$}
-         \label{line:family:power-set}
-      \State ${\hat p}_{\ms{cert}} \leftarrow \sum_{S \in \mathcal{F}_{\ms{cert}}} \hat{p}_S[q_e]$
-      \ForAll {$b_{\ms{res}} \mbox{ \textbf{s.t.} }
-            b_{\ms{res}} : \mathcal{F}_{\ms{cert}} \rightarrow \{\mbox{True},\mbox{False}\}$}
-            \label{line:family:all-binary-functions}
-         \State $\arraycolsep=2pt
-            P_{\ms{res}} \leftarrow
-            \left\{\left. \begin{array}{rl}
-            \mathbf{1}_S & \mbox{if } b_{\ms{res}}(S) \\
-            \lnot \mathbf{1}_S & \mbox{otherwise} \\
-            \end{array}
-            \right|
-            S \in \mathcal{F}_{\ms{cert}}
-            \right\}$
-         \If {$P_{\ms{known}} \cup P_{\ms{res}}
-               \Rightarrow \mathbf{1}_U$ is valid}
-            \State $\mathcal{T}_{\ms{imply}} \leftarrow
-               \mathcal{T}_{\ms{imply}} \cup
-               \{ (\mathcal{F}_{\ms{cert}}, b_{\ms{res}}, {\hat p}_{\ms{cert}}) \}$
+\Procedure{$x_{\ms{\textup{family}}}$}{$e$}
+   \Comment determine exec cost
+   \State $b_e \leftarrow$ stored belief state of edge $e$
+   \If {$d_{S_u}(b_e) < \infty$}
+      \State $\pi_{\mathcal{F}} \leftarrow$ optimal path from $b_e$
+         on $G_{\mathcal{F}}$
+      \ForAll {$e_{\mathcal{F}} \in \pi_{\mathcal{F}}$}
+         \State $(S_{\ms{opt}},r_{\ms{opt}}) \leftarrow e_{\mathcal{F}}$
+         \State $r_{\ms{act}} \leftarrow \mathbf{1}_{S_{\ms{opt}}}[e]$
+         \If {$r_{\ms{act}} \neq r_{\ms{opt}}$}
+            \State $b_e \leftarrow \mbox{target}(\mbox{complement}(e_{\mathcal{F}}))$
+            \State \textbf{break}
          \EndIf
+         \State $b_e \leftarrow \mbox{target}(e_{\mathcal{F}})$
       \EndFor
-   \EndFor
-   \State \Return $(\mathcal{F}_{\ms{cert}}, b_{\ms{res}}, {\hat p}_{\ms{cert}})
-      \in \mathcal{T}_{\ms{imply}}$
-      with lowest ${\hat p}_{\ms{cert}}$
-\EndFunction
+   \EndIf
+   \State \Return $\hat{x}_{\ms{\textup{family}}}(e)$
+\EndProcedure
 \end{algorithmic}
 \end{algorithm}
-
-The function accumulates a set $\mathcal{T}_{\ms{imply}}$ of
-valid certificates which would imply membership in $U$.
-We proceed by considering all combinations of
-available $\mathcal{C}$-subset indicators
-$\mathcal{F}_{\ms{cert}}$ (line~\ref{line:family:power-set}).
-For each set of evaluations,
-we compute the planning effort ${\hat p}_{\ms{cert}}$
-which would be required.
-We then consider all possible outcomes for each indicator
-by iterating over all functions $b_{\ms{res}}$ mapping
-from $\mathcal{C}$-subset $S$ to binary values
-(line~\ref{line:family:all-binary-functions}).
-For each potential outcome $b_{\ms{res}}$,
-we form the set of additional propositions $P_{\ms{res}}$,
-and then use a propositional logic solver to determine whether
-the aggregate premises imply membership
-in the query $\mathcal{C}$-subset $U$.
-If so, this certificate is added to $\mathcal{T}_{\ms{imply}}$,
-and the lowest-effort certificate is returned.
-
-\section{Family Belief as a Utility Model}
-\label{sec:family:as-utility}
-
-We show preliminary results of applying LEMUR to planning over
-such $\mathcal{C}$-space families on the sequential
-three-step task in
-Figure~\ref{fig:family:herbarmmultithread-master}.
-Such a planner can be seen as a generalization of self-collision checked
-\citep{leven2002changing} or dynamic \citep{jaillet2004dynamicprm}
-roadmaps to a larger number of subsets.
-
-This section lays out how to leverage the family formulation
-as a planning effort model
-for use in the E$^8$-PRM.
-The resulting algorithm,
-the Family PRM,
-exploits the family structure inherent in manipulation problems
-by efficiently reuses planning computation between related queries.
-
-The Family PRM (Algorithm~\ref{alg:family:prm}) is a simple
-extension of the \mbox{E$^8$-PRM}
-(Section~??).
-They key differences are that
-(a) it reasons about $\mathcal{C}$-subsets
-using logical propositions,
-and (b) it uses a family ensemble effort model
-$\mathcal{M}_{\ms{family}}$ to capture relations
-between these subsets.
-
-\subsection{Relation to Previous Work}
-
-A large body of prior work has focused on methods to
-improve planning efficiency on manipulation problems.
-We show that many of these approaches are
-in fact special instances of a more general structure,
-which we formulate as the \emph{family motion planning problem}.
-
-\subsection{Show some examples of the behavior?}
-
-
-
 
 \section{Application: Multi-Step Manipulation Tasks}
 \label{subsec:family:app-multi-step}
 
-\subsection{Grasped Objects}
-\label{subsec:family:grasped-objects}
+We conducted an empirical test of LEMUR using the
+family edge cost model (Algorithm~\ref{alg:family:model-family})
+on multi-step manipulation planning problems on two different robotic
+platforms.
+In each case,
+we compared its performance with that of the simple edge cost model
+(Algorithm~\ref{alg:model-simple} from Chapter~\ref{chap:utility}).
+We also include in the comparison the RRT-Connect algorithm
+from OMPL.
 
-One instance specific to manipulation problems is the handling of
-grasped objects.
-For example, 
-consider a manipulator which grasps a geometric object.
-This affects the set of collision-free configurations
-across a large section of $\mathcal{C}$
-relative to the old set of valid configurations $S_{\ms{old}}$.
-However,
-the resulting $\mathcal{C}$-subset $S_{new}$
-can be represented simply as
-$S_{\ms{new}} = S_{\ms{old}} \cap G$,
-with $G$ the set of robot configurations in which
-the \emph{grasped object} (only)
-is deemed free of collision with the robot and environment.
-This structure is discussed in the context of the
-\emph{conditional reachability graph},
-part of the \textsc{FFRob} heuristic framework
-\citep{garrett2014ffrob}.
+\subsection{Table-Clearing with HERB}
 
-For example,
-consider the manipulation problem in
-Figure~\ref{fig:family:testherb-problem}.
-The robot must find a path which moves its arm to grasp the cup.
-After the cup is grasped,
-the robot can reuse any edge in the existing roadmap
-by simply checking the grasped cup
-against the remainder of the environment.
-This structure,
-together with the approach to dynamic environments,
-are included together in the experimental results
-(Section~\ref{subsec:family:herb-experiment}).
-
-\begin{marginfigure}
+\begin{figure*}[t]
    \centering
-   \includegraphics{build/self-collision}
-   \caption{A roadmap is pre-computed in $R$,
-      the subset of $\mathcal{C}$ consisting of configurations free
-      of robot self-collision.
-      Online, the planner must find a path that's also within $E$,
-      the subset free of environment collision.
-      When solving this query in $S = R \cap E$,
-      the Family PRM automatically prefers potential paths with
-      pre-computed edges (e.g. shown in grey)
-      due to lower planning costs over alternatives with lower
-      execution costs.}
-   \label{fig:family:self-collision-example}
-\end{marginfigure}
+   
+   \subfloat[Starting Configuration]{
+      \includegraphics[width=0.185\linewidth]{figs/testherb-a.png}
+   }
+   \subfloat[Step 1, in $S_1$]{
+      \includegraphics[width=0.185\linewidth]{figs/testherb-b.png}
+   }
+   \subfloat[Step 2, in $S_2$]{
+      \includegraphics[width=0.185\linewidth]{figs/testherb-c.png}
+   }
+   \subfloat[Step 3, in $S_3$]{
+      \includegraphics[width=0.185\linewidth]{figs/testherb-d.png}
+   }
+   \subfloat[Ending Configuration.]{
+      \includegraphics[width=0.185\linewidth]{figs/testherb-e.png}
+   }
 
-\subsection{Prescribed Steps}
+   \caption[][0.2in]{
+     A home robot performing a three-step manipulation task.
+     It must move from its home configuration
+     to grasp the cup,
+     transfer it to a drop location above the bin,
+     and return home.}
+   \label{fig:family:testherb-problem}
+\end{figure*}
 
-We tested the Family PRM on the manipulation task
-described in Fig.~\ref{fig:family:testherb-problem}.
-We used the $r$-disk PRM construction rule with $r=2.0$ rad,
-and a batch size of $N=1000$.
-Planning times are measured on a Lenovo T430s laptop.
-The planner was asked to solve each of the steps of the plan
-sequentially.
+The first task we considered is the table clearing task from
+Figure~\ref{fig:family:testherb-problem}.
+Each condition for LEMUR was conducted over 50 randomly generated
+Halton roadmaps with 10,000 milestones per batch
+and a $r_{\ms{loglog}}$ connection radius schedule with $\eta = 1$
+(see Section~\ref{sec:roadmaps:roadmap-classes}).
+We varied the $\lambda_p$ planning-vs.-execution tradeoff parameter
+between $0.0$ to $0.99$ (Chapter~\ref{chap:utility}),
+and selected either
+the simple edge cost model $\mathcal{M}_{\ms{simple}}$
+or the family edge cost model $\mathcal{M}_{\ms{family}}$
+described above.
 
-We varied
-(a) the planning vs. execution parameter $\lambda$
-(see Chapter~\ref{chap:utility}), and
-(b) the subset relations provided to the planner
-as described in Section~\ref{subsec:family:dynamic-environments}.
-We measured the time required for planning (s)
-and the length of the resulting solution resulting path (rad)
-for each step of the task.
+The task consists of 3 steps (transit, transfer, and transit).
+The family module computeda decomposition of the full task
+and discovered the following distinct C-space subsets
+over the full planning problem.
+\begin{table}
+   \centering
+   \begin{tabular}{cc}
+      R & E \\
+      c & d \\
+   \end{tabular}
+\end{table}
+
+We measured the length of the path returned by each algorithm (rad),
+as well as the total planning time as measured by a wall clock (s).
+
+
+
+
 
 Note that the Family PRM,
 with no relations specified and $\lambda=0$
@@ -1330,6 +1252,9 @@ path length is unchanged as the number of set relations is
 changed
 -- this is because the paths that are selected for evaluation
 by the algorithm are a function only of their (constant) lengths.
+
+
+\subsection{Tending a Press Brake with an IRB4400}
 
 \begin{figure}
    \centering
@@ -1389,36 +1314,6 @@ by the algorithm are a function only of their (constant) lengths.
 %      These results use $R=2.5$ scaled by $\log(\log(n))/n$.}
 %   \label{fig:family:workcell-pvx}
 %\end{figure}
-
-\begin{figure*}[t]
-   \centering
-   
-   \subfloat[Starting Configuration]{
-      \includegraphics[width=0.185\linewidth]{figs/testherb-a.png}
-   }
-   \subfloat[Step 1, in $S_1$]{
-      \includegraphics[width=0.185\linewidth]{figs/testherb-b.png}
-   }
-   \subfloat[Step 2, in $S_2$]{
-      \includegraphics[width=0.185\linewidth]{figs/testherb-c.png}
-   }
-   \subfloat[Step 3, in $S_3$]{
-      \includegraphics[width=0.185\linewidth]{figs/testherb-d.png}
-   }
-   \subfloat[Ending Configuration.]{
-      \includegraphics[width=0.185\linewidth]{figs/testherb-e.png}
-   }
-
-   \caption[][0.2in]{
-     A home robot performing a three-step manipulation task.
-     It must move from its home configuration
-     to grasp the cup,
-     transfer it to a drop location above the bin,
-     and return home.
-     Experimental results for the Family PRM
-     are shown in Table~\ref{tab:family:testherb}}
-   \label{fig:family:testherb-problem}
-\end{figure*}
 
 \begin{figure}
    \centering
@@ -1614,6 +1509,46 @@ by the algorithm are a function only of their (constant) lengths.
 
 Here's some notes on the workcell example:
 
+\begin{table*}
+   \centering
+   \begin{minipage}[t]{.65\textwidth}
+   \begin{tabular}{cll}
+      \toprule
+      Subset & Geometry1 & Geometry2 \\
+      \midrule
+      $S_1$  & RobotMoving & RobotMoving + EnvStatic \\
+      $S_2$  & RobotMoving & SheetPlacedStart \\
+      $S_3$  & RobotMoving & SheetPlacedSettling \\
+      $S_4$  & RobotMoving & SheetPlacedDestination \\
+      $S_5$  & GraspedTopSide & RobotMoving + EnvStatic \\
+      $S_6$  & GraspedTopSide1Flat & RobotMoving + EnvStatic \\
+      $S_7$  & GraspedTopSide1Bent & RobotMoving + EnvStatic \\
+      $S_8$  & GraspedBotSide & RobotMoving + EnvStatic \\
+      $S_9$  & GraspedBotSide2Flat & RobotMoving + EnvStatic \\
+      $S_{10}$ & GraspedBotSide2Bent & RobotMoving + EnvStatic \\
+      \bottomrule
+   \end{tabular}
+   \end{minipage}
+   \begin{minipage}[t]{.30\textwidth}
+   \begin{tabular}{cl}
+      \toprule
+      Subset & Defined as \\
+      \midrule
+      $AB$  & $S_1 \cap S_2$ \\
+      $BC$  & $S_1 \cap S_5 \cap S_6$ \\
+      $CD$  & $S_1 \cap S_5 \cap S_6$ \\
+      $EF$  & $S_1 \cap S_5 \cap S_7$ \\
+      $FG$  & $S_1 \cap S_3$ \\
+      $GH$  & $S_1 \cap S_8 \cap S_9$ \\
+      $IJ$  & $S_1 \cap S_8 \cap S_{10}$ \\
+      $JA$  & $S_1 \cap S_4$ \\
+      \bottomrule
+   \end{tabular}
+   \end{minipage}
+   \caption{Constituent subsets in the \texttt{workcell} example
+      problem.}
+\end{table*}
+
 \begin{verbatim}
 workcell basic (independent) atoms:
  (1) (robot) x (self+staticenv)
@@ -1647,241 +1582,7 @@ FamilyUtilityChecker reports 17 vars (makes sense)
 
 
 
-\section{Application: Caching Invariant Geometry}
-\label{subsec:family:cached-self-valid}
 
-\paragraph{Cached Self-Collision-Checked Roadmaps}
-Self-collision checking is a potentially expensive component to
-articulated motion planning;
-in contrast to environment checking,
-it is fundamentally quadratic in the number of moving links.
-Further, pairs of links to be checked
-tend to be relatively close to each other,
-reducing the effeciveness of broad-phase approaches.
-
-Leven and Hutchinson \citep{leven2000changing}
-introduced the concept of a pre-cached roadmap consisting of
-configurations and paths already known to be valid w.r.t.
-self-collision.
-As a type of invariant in $\mathcal{C}$,
-this can be seen as a particular instance of family motion planning.
-See Fig.~\ref{fig:family:self-collision-example}.
-
-\begin{figure*}
-   \centering   
-   \includegraphics{build/family-sq-caching/pvxs}
-   \caption[]{LEMUR single-query results on several HERB problems,
-      all using baked calls.
-      Traces are LEMUR
-      (\protect\tikz{\protect\draw[thick,black] (0,0) -- (0.15,0.15);}),
-      the family motion planner (no caching)
-      (\protect\tikz{\protect\draw[thick,blue] (0,0) -- (0.15,0.15);}),
-      or the family motion planner with self-checked caching
-      (\protect\tikz{\protect\draw[thick,green] (0,0) -- (0.15,0.15);}).}
-\end{figure*}
-
-
-
-
-
-\section{Application: Exploiting Conservative Geometric Approximations}
-\label{subsec:family:broad-phase}
-
-The family formulation also enables motion planners to
-reason directly about different robot or environment models.
-For example, consider two geometric robot models,
-one with high quality (e.g. from a CAD program),
-and one hand-tuned ``padded'' model consisting of 
-a small number of simple conservative bounding volumes.
-The $\mathcal{C}$-subsets derived from these models
-are related by $R_{\ms{padded}} \subseteq R_{\ms{CAD}}$.
-Collision checkers currently use a similar approach internally
-to speed up collision checks (see Fig.~\ref{fig:family:broad-phase}.
-and Fig~\ref{fig:family:broad-phase-2d}).
-
-See Figure~\ref{fig:family:broad-phase-2d}
-for a simple example with integrated broad-phase collision checking
-as described in Section~\ref{subsec:family:broad-phase}.
-
-\begin{figure*}[b]
-   \centering
-   
-   \subfloat[
-      A single-set planner testing simply for membership in
-      $\mathcal{C}_{\mbox{\scriptsize free}}$
-      treats a collision validity checker as a
-      ``black box.''
-      Internally,
-      modern checkers first employ an inexpensive broad-phase check
-      using a low-dimensional conservative representation
-      to quickly identify non-colliding bodies before
-      resorting to an expensive narrow-phase check.
-   ]{%
-      \includegraphics{build/broadphase-single}%
-   }%
-   \quad%
-   \subfloat[
-      A family motion planner can explicitly reason about the
-      conservative nature of the broad-phase check.
-      This allows it to defer some narrow phase checks
-      (often indefinitely)
-      and instead prefer paths that require fewer expensive checks.
-   ]{%
-      \includegraphics{build/broadphase-multi}%
-   }
-   
-   \caption[][0.0in]{Collision validity checking is a commonly used
-     indicator function.
-     The family formulation allows an intelligent planner to
-     reach inside the checker's ``black box'' and reduce the number
-     of costly narrow-phase checks.
-     Resulting paths tend to be cheaper to compute and
-     stay further from obstacles.}
-   \label{fig:family:broad-phase}
-\end{figure*}
-
-% this is the broad phase bean figure
-\begin{figure}
-   \centering
-
-   % left side
-   \subfloat[Paths with lambda=0][%
-      \centering
-      Paths with $\lambda = 0$\par
-      Average length: 733.0\par
-      Average check cost: 7219.5
-   ]{
-      \includegraphics[width=0.45\textwidth]
-      {figs/bean-allpaths-lambda0.png}
-   }
-   % right side
-   \subfloat[Paths with lambda=1][%
-      \centering
-      Paths with $\lambda = 1$\par
-      Average length: 836.5\par
-      Average check cost: 4692.6
-   ]{
-      \includegraphics[width=0.45\textwidth]
-      {figs/bean-allpaths-lambda1.png}
-   }
-   \\
-   \subfloat[Paths with lambda=0][%
-      \centering
-      Paths with $\lambda = 0$\par
-      Average length: 733.0\par
-      Average check cost: 2685.7
-   ]{
-      \includegraphics[width=0.45\textwidth]
-      {figs/bean-allpaths-padded-lambda0.png}
-   }
-   % right side
-   \subfloat[Paths with lambda=1][%
-      \centering
-      Paths with $\lambda = 1$\par
-      Average length: 907.1\par
-      Average check cost: 1064.5
-   ]{
-      \includegraphics[width=0.45\textwidth]
-      {figs/bean-allpaths-padded-lambda1.png}
-   }
-
-   \caption{A simple 2D example of the Family PRM using
-     a broad-phase check.
-     Checking for collision with the grey box is 10x less expensive
-     than with the actual black obstacle.}
-     %\cdnote{I need to talk about this in the text.}}
-   \label{fig:family:broad-phase-2d}
-\end{figure}
-
-
-
-
-
-
-\section{Application: Dynamic Environments}
-
-\paragraph{Dynamic Environments.}
-\label{subsec:family:dynamic-environments}
-
-\begin{figure}
-   \centering
-
-   \begin{minipage}{.6\textwidth}
-      \begin{tikzpicture}
-      \tikzset{>=latex} % arrow heads
-      \node[anchor=south west,inner sep=0] at (0,0)
-        {\includegraphics[width=0.8\textwidth]{figs/chimp-voxels-delta.png}};
-
-      \node[draw,inner sep=3pt,fill=white,fill opacity=0.9,align=center]
-        (debrislab) at (0.7,1.0) {Debris object\\removed};
-      \node[circle,inner sep=2,draw,fill=white] (debris) at (2.2,2.9) {};
-      \draw[draw=black, double=white, double distance=1pt, line width=1pt]
-        (debrislab.north) -- (debris);
-        
-      \node[draw,inner sep=3pt,fill=white,fill opacity=0.9,align=center]
-        (addlab) at (5.0,2.0) {Additional\\voxels seen};
-      \node[circle,inner sep=2,draw,fill=white] (added) at (4.4,5.0) {};
-      \draw[draw=black, double=white, double distance=1pt, line width=1pt]
-        (addlab.north) -- (added);
-        
-      \end{tikzpicture}
-   \end{minipage}%
-   \,%
-   \begin{minipage}{.35 \textwidth}
-      \includegraphics{build/retroactive-a}
-      
-      \includegraphics{build/retroactive-b}
-   \end{minipage}
-
-   \caption{
-      Structured or unstructured dynamic environments
-      can be represented as a family problem
-      (see Section~\ref{subsec:family:dynamic-environments}).
-      
-      \vspace{0.05in}
-      \noindent
-      (Left) A disaster response robot maintains a
-      dynamic unstructured environment model
-      using coarse voxels
-      (scene data from a debris-clearing task at a
-      recent disaster response competition).
-      Since the last planning query,
-      voxels have been added (green) and removed (red).
-      
-      \vspace{0.05in}
-      \noindent
-      (Right) $\mathcal{C}$-subsets and relations
-      can be added retroactively.
-      Here, the graph for an initial query is checked w.r.t $S_1$.
-      After environment changes,
-      $S_1$ is redefined in terms of the $\mathcal{C}$-subsets
-      derived from the set of common, added, and removed elements,
-      allowing for reuse on a query in $S_2$.
-      Here,
-      the planner need only check existing path segments
-      against added voxels in order to reuse them for the current query.}
-   \label{fig:family:dynamic-environments}
-\end{figure}
-
-The sensors on most articulated robots allow them to maintain
-dynamic environment models to track changing collision geometry.
-These models might be
-structured (e.g. recognizing objects with known models)
-or unstructured (e.g. occupancy models).
-In both cases,
-even in a changing world,
-there are often areas that are fixed between planning queries.
-
-Prior work (e.g. \citep{jaillet2004dynamicprm})
-leverages this by imposing a dichotomy between
-\emph{fixed} and \emph{moving} components of $\mathcal{C}$.
-Our formulation extends this to an arbitrary number of such labels,
-including ones defined retroactively (i.e. during planning;
-see Fig.~\ref{fig:family:dynamic-environments}).
-By explicitly labeling such areas in workspace
-(and leveraging the \emph{set containment} property
-\citep{newmanbranicky1991cspacetransforms}),
-we can represent this structure as a family motion planning problem.
 
 
 \section{Implementation Details}
